--- a/index.html
+++ b/index.html
@@ -64,21 +64,19 @@
 
     <div class="carousel-item">
         <div class="carousel-box">
-            <div class="title">I feel very Lucky Everyday 😇</div>
+            <div class="title"></div>
             <div class="num">08</div>
             <a href="https://ibb.co/Lh243ZzY"><img src="https://i.ibb.co/JFMX9sRm/IMG-20250214-WA0003.jpg" alt="IMG-20250214-WA0003"></a>
         </div>
     </div>
 </div>
 
-<div class="layout">
-    <div class="box">High-end, full-service<br>visual content creation<br>for lifestyle branding.</div>
-</div>
+
 
 <a href="https://www.supah.it" target="_blank" class="logo">S</a>
 <div class="social">
     <a href="#" target="_blank"><svg><use xlink:href="#ico-linkedin"></use></svg></a>
-    <a href="https://www.instagram.com/developer_rahul_/" target="_blank"><svg><use xlink:href="#ico-instagram"></use></svg></a>
+    <a href="#" target="_blank"><svg><use xlink:href="#ico-instagram"></use></svg></a>
 </div>
 
 <svg style="display: none">
